# hephfx-micro-svc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  app.yaml  go.mod  go.sum  readme.md
clients/go/: main.go
clients/go/k8sresolver/: main.go
clients/go/pb/: hello.pb.go  hello.pb.gw.go  hello_grpc.pb.go
clients/nodejs/: app.js  package-lock.json
clients/nodejs/pb/: hello_grpc_pb.js  hello_pb.js
cmd/gateway/: main.go
cmd/rpc/: main.go
internal/interfaces/gateway/middleware/: monitor.go  request.go  timeout.go
internal/interfaces/rpc/interceptor/: request.go
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  readme.md  service-node-port.yaml  service.yaml
pb/: validator_req.go
protos/: hello.proto
src/: client.rs  main.rs  reame.md
src/infras/: app.rs  mod.rs
