[package]
name = "hephfx-micro-svc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[dependencies]
tonic = "0.14.2"

# 异步运行时相关依赖
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.145"

# 配置文件读取以及用于消息序列化和反序列化处理
serde_yaml = "0.9.33"
once_cell = "1.21.3"

# autometrics-rs 用于自动prometheus metrics服务可观测性
autometrics = { version = "3.0.0", features = ["prometheus-exporter"] }

# 操作日志
log = "0.4.28"

# 通过git方式引入 hello-pb 包
hello-pb = { git = "https://github.com/daheige/hello-pb",tag = "v1.0.1" }

# monitor 包
monitor = { git = "https://github.com/rs-god/hera",tag = "v1.0.1" }
logger = { git = "https://github.com/rs-god/hera",tag = "v1.0.1" }
config = { git = "https://github.com/rs-god/hera",tag = "v1.0.1" }
shutdown = { git = "https://github.com/rs-god/hera",tag = "v1.0.1" }